--- a/src/2-progress-steps/index.html
+++ b/src/2-progress-steps/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Progress-Steps</title>
 </head>
 <body>
-    
+    <!-- 
+        思路： 
+        1. 创建一个进度条容器，并创建它的前置伪元素作为进度条的横条线，宽度随容器变化。
+        2. 容器子元素创建显示载入进度子元素，子元素的宽度等于目前进度项元素的宽度之和。
+        3. 进度条容器下创建若干个进度项目。
+        4. 监听上一步、下一步按钮的点击事件，事件中设置进度项目样式以及第二步的宽度。
+    -->
+    <div class="wrapper">
+        <div class="progress-container">
+            <div id="progressed"></div>
+            <div class="box active">1</div>
+            <div class="box">2</div>
+            <div class="box">3</div>
+            <div class="box">4</div>
+        </div>
+        <div class="btn-groups">
+            <button id="prev" class="btn" >上一步</button>
+            <button id="next" class="btn" >下一步</button>
+        </div>
+    </div>
+    <script src="./script.js"></script>
 </body>
 </html>
