--- a/src/3-Rotating-Navigation/index.html
+++ b/src/3-Rotating-Navigation/index.html
@@ -9,7 +9,7 @@
     <title>3-Rotating-Navigation</title>
 </head>
 <body>
-    <div class="wrapper show-tab">
+    <div class="wrapper">
         <div class="circle-wrapper">
             <div class="circle">
                 <button id="close">
